silex/tests/ui/fail_unit_to_keyword.stderr
error[E0277]: 类型 `Px` 无法作为有效的 CSS `silex::prelude::props::Display` 属性值使用
 --> tests/ui/fail_unit_to_keyword.rs:5:26
  |
5 |     let _ = Style::new().display(px(10));
  |                          ^^^^^^^ 无效的 CSS 属性类型
  |
  = help: the trait `ValidFor<silex::prelude::props::Display>` is not implemented for `Px`
  = note: 请检查是否传入了错误的类型（例如将 Px 传给了 Color）。如果必须传入复杂的动态表达式，可以使用 `UnsafeCss::new(...)` 显式绕过。
  = help: the following other types implement trait `ValidFor<Prop>`:
            `Px` implements `ValidFor<AlignContent>`
            `Px` implements `ValidFor<AlignItems>`
            `Px` implements `ValidFor<AlignSelf>`
            `Px` implements `ValidFor<AlignmentBaseline>`
            `Px` implements `ValidFor<Animation>`
            `Px` implements `ValidFor<AnimationComposition>`
            `Px` implements `ValidFor<AnimationDelay>`
            `Px` implements `ValidFor<AnimationDirection>`
          and $N others
note: required by a bound in `silex::prelude::Style::display`
 --> src/css/builder.rs
  |
  | crate::for_all_properties!(generate_builder_methods);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | required by a bound in this associated function
  | required by this bound in `Style::display`
  = note: this error originates in the macro `generate_builder_methods` which comes from the expansion of the macro `crate::for_all_properties` (in Nightly builds, run with -Z macro-backtrace for more info)
